# mate-mpv

./: .gitignore  README.md  mate-mpv.cpp  mate-mpv.desktop  mate_mpv.py  meson.build
.github/workflows/: ci.yml  nightly.yml
data/: .gitkeep
data/icons/48x48/: mate-mpv.xpm
debian/: changelog  control  copyright  debhelper-build-stamp  files  mate-mpv.substvars  watch
debian/mate-mpv/DEBIAN/: control  md5sums
debian/mate-mpv/usr/share/doc/mate-mpv/: copyright
help/: .gitkeep
src/: langlist.cpp  langlist.h  main.cpp
